--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
 #sketchGrid {
-    display: flexbox;
+    display: flex;
+    flex-direction: row;
+    user-select: none;
+}
+
+.gridColumn {
+    display: flex;
+    flex-direction: column;
+    user-select: none;
 }
 
 .squareCont {
-    height: 100px;
-    width: 100px;
+    border-style: solid;
+    border-width: 1px;
+    height: 10px;
+    width: 10px;
+    user-select: none;
 }
+
+
