--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
+h1, h2, h3 {
+    text-align: center;
+}
+
+.container {
+    display: flex;
+}
+
+#sidePanel {
+    display: flex;
+    flex-direction: column;
+}
+
 #buttonContainer {
     display: flex;
-    background-color: beige;
+    flex-direction: column;
+    justify-content: center;
+}
+
+button {
+    margin: 5px 0;
 }
 
 #gridContainer {
@@ -8,23 +26,31 @@
     justify-content: center;
     background-color: beige;
     border-radius: 25px;
+    max-width: 650px;
+    max-height: 650px;
+    width: 650px;
+    height: 650px;
     margin: 10px;
     padding: 10px;
 }
 
 #sketchGrid {
     display: flex;
-    flex: 1;
-    overflow: auto;
     flex-direction: row;
     justify-content: center;
+    align-self: center;
+    flex: 1;
+    overflow: auto;
     user-select: none;
     border-style: solid;
     border-width: 1px;
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 550px;
+    max-height: 550px;
+    width: 550px;
+    height: 550px;
     margin: 20px;
     padding: 0px;
+    box-shadow: 4px 4px 10px 2px rgba(0, 0 ,0 , 0.3);
 }
 
 .gridColumn {
